--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,6 @@
 run:
   timeout: 3m
   tests: true
-  skip-dirs:
-    - vendor
 
 linters:
   enable:
@@ -17,6 +15,8 @@ linters:
 
 issues:
   exclude-use-default: false
+  exclude-dirs:
+    - vendor
 
 severity:
   default-severity: error
